--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="css/skeleton.css?v=1.0">
   <link rel="stylesheet" href="css/style.css?v=1.0">
 
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Lora:400,700|Lato:400,700' rel='stylesheet' type='text/css'>
+
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
 </head>
@@ -30,12 +32,11 @@
   <div class="container">
     <div class="row ad-wrap">
       <div class="twelve columns">
-        <div class="adbox">
+        <div class="adbox1">
           ad goes here
         </div>
       </div>
-    </div>
-  </div> <!-- end row -->
+    </div> <!-- end row -->
 
     <div class="row">
       <div class="main-sidebar">
@@ -89,10 +90,10 @@
 
     <div class="ad-wrap row">
       <div class="two columns">
-        <div class="adbox">ad goes here</div>
+        <div class="adbox2">ad goes here</div>
       </div>
       <div class="two columns">
-        <div class="adbox">ad goes here</div>
+        <div class="adbox2">ad goes here</div>
       </div>
     </div> <!-- end row -->
 
