--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div> <!-- end main-sidebar -->
 
       <div class="center-story">
-        <div class="six columns">
+        <div class="seven columns">
           <p class="kicker">From Abroad</p>
           <div class="story">
             <img src="http://static01.nyt.com/images/2015/10/12/science/20151013GHANA-slide-GI8V/20151013GHANA-slide-GI8V-largeHorizontal375.jpg" alt="">
@@ -89,15 +89,15 @@
     </div> <!-- end row -->
 
     <div class="ad-wrap row">
-      <div class="two columns">
+      <div class="six columns">
         <div class="adbox2">ad goes here</div>
       </div>
-      <div class="two columns">
+      <div class="six columns">
         <div class="adbox2">ad goes here</div>
       </div>
     </div> <!-- end row -->
 
-    <div class="refers row">
+    <div class="refers-row">
       <div class="refer">
         <div class="two columns">
           <p class="kicker">Dealbook</p>
