--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
     </div> <!-- end row -->
 
-    <div class="refers-row">
+    <div class="refers row">
       <div class="refer">
         <div class="two columns">
           <p class="kicker">Dealbook</p>
